--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="../reset.css" type="text/css">
-  <link rel="stylesheet" href="../style.css" type="text/css">
-  <link rel="stylesheet" href="../header.css" type="text/css">
-  <link rel="stylesheet" href="../footer.css" type="text/css">
+  <link rel="stylesheet" href="../Static/reset.css" type="text/css">
+  <link rel="stylesheet" href="../Static/style.css" type="text/css">
+  <link rel="stylesheet" href="../Static/header.css" type="text/css">
+  <link rel="stylesheet" href="../Static/footer.css" type="text/css">
   <script src="https://kit.fontawesome.com/0b3e49b738.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
