--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
     </ul>
   </nav>
   <section id="welcome-section" class="welcome-section">
-    <h1>Hello! mon nom est Tom <img src="../Static/images/photocv2023.jpeg" width="80" height="120"></h1>
+    <h1>Hello! mon nom est Tom <img src="../images/photocv2023.jpeg" width="80" height="120"></h1>
     <p> je suis un Développeur web</p>
   </section>
   <section id="competence">
     <h2 id="mescompetences"> MES COMPÉTENCES</h2>
     <h4 id="mescompetences">des compétences a votre service </h4>
     <div class="container">
-      <img class="grid" src="../Static/images/CSS-Logo-PNG.png" alt="">
-      <img class="grid" src="../Static/images/Debian_logo_PNG2.png" alt="">
-      <img class="grid" src="../Static/images/html_logo.png" alt="">
-      <img class="grid" src="../Static/images/java.png" alt="">
-      <img class="grid" src="../Static/images/js.png" alt="">
-      <img class="grid" src="../Static/images/linux.png" alt="">
-      <img class="grid" src="../Static/images/php.png" alt="">
-      <img class="grid" src="../Static/images/Figma-logo.svg" alt="">
+      <img class="grid" src="../images/CSS-Logo-PNG.png">
+      <img class="grid" src="../images/Debian_logo_PNG2.png" alt="">
+      <img class="grid" src="../images/html_logo.png" alt="">
+      <img class="grid" src="../images/java.png" alt="">
+      <img class="grid" src="../images/js.png" alt="">
+      <img class="grid" src="../images/linux.png" alt="">
+      <img class="grid" src="../images/php.png" alt="">
+      <img class="grid" src="../images/Figma-logo.svg" alt="">
     </div>
   </section>
 
