--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="../reset.css" type="text/css">
-  <link rel="stylesheet" href="../style.css" type="text/css">
-  <link rel="stylesheet" href="../header.css" type="text/css">
-  <link rel="stylesheet" href="../footer.css" type="text/css">
+  <link rel="stylesheet" href="../css/reset.css" type="text/css">
+  <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <link rel="stylesheet" href="../css/header.css" type="text/css">
+  <link rel="stylesheet" href="../css/footer.css" type="text/css">
   <script src="https://kit.fontawesome.com/0b3e49b738.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
@@ -37,14 +37,14 @@
     <h2 id="mescompetences"> MES COMPÉTENCES</h2>
     <h4 id="mescompetences">des compétences a votre service </h4>
     <div class="container">
-      <img class="grid" src="../images/CSS-Logo-PNG.png">
-      <img class="grid" src="../images/Debian_logo_PNG2.png" alt="">
-      <img class="grid" src="../images/html_logo.png" alt="">
-      <img class="grid" src="../images/java.png" alt="">
-      <img class="grid" src="../images/js.png" alt="">
-      <img class="grid" src="../images/linux.png" alt="">
-      <img class="grid" src="../images/php.png" alt="">
-      <img class="grid" src="../images/Figma-logo.svg" alt="">
+      <img class="grid" src="../css/images/CSS-Logo-PNG.png">/css
+      <img class="grid" src="../css/images/Debian_logo_PNG2.png" alt="">
+      <img class="grid" src="../cssimages/html_logo.png" alt="">
+      <img class="grid" src="../css/images/java.png" alt="">
+      <img class="grid" src="../css/images/js.png" alt="">
+      <img class="grid" src="../css/images/linux.png" alt="">
+      <img class="grid" src="../css/images/php.png" alt="">
+      <img class="grid" src="../css/images/Figma-logo.svg" alt="">
     </div>
   </section>
 
