--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="../css/reset.css" type="text/css">
-  <link rel="stylesheet" href="../css/style.css" type="text/css">
-  <link rel="stylesheet" href="../css/header.css" type="text/css">
-  <link rel="stylesheet" href="../css/footer.css" type="text/css">
+  <link rel="stylesheet" href="./css/reset.css" type="text/css">
+  <link rel="stylesheet" href="./css/style.css" type="text/css">
+  <link rel="stylesheet" href="./css/header.css" type="text/css">
+  <link rel="stylesheet" href="./css/footer.css" type="text/css">
   <script src="https://kit.fontawesome.com/0b3e49b738.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
@@ -37,14 +37,14 @@
     <h2 id="mescompetences"> MES COMPÉTENCES</h2>
     <h4 id="mescompetences">des compétences a votre service </h4>
     <div class="container">
-      <img class="grid" src="../images/CSS-Logo-PNG.png">
-      <img class="grid" src="../images/Debian_logo_PNG2.png" alt="">
-      <img class="grid" src="../images/html_logo.png" alt="">
-      <img class="grid" src="../images/java.png" alt="">
-      <img class="grid" src="../images/js.png" alt="">
-      <img class="grid" src="../images/linux.png" alt="">
-      <img class="grid" src="../images/php.png" alt="">
-      <img class="grid" src="../images/Figma-logo.svg" alt="">
+      <img class="grid" src="./images/CSS-Logo-PNG.png">
+      <img class="grid" src="./images/Debian_logo_PNG2.png" alt="">
+      <img class="grid" src="./images/html_logo.png" alt="">
+      <img class="grid" src="./images/java.png" alt="">
+      <img class="grid" src="./images/js.png" alt="">
+      <img class="grid" src="./images/linux.png" alt="">
+      <img class="grid" src="./images/php.png" alt="">
+      <img class="grid" src="./images/Figma-logo.svg" alt="">
     </div>
   </section>
 
@@ -81,7 +81,7 @@
 
     <div class="projects-grid">
       <a href="https://github.com/godafflig/sokoban" target="_blank" class="project project-tile">
-        <img class="project-image" src="/portfolioyboost/Static/images/sokoban.png" alt="project" />
+        <img class="project-image" src="./images/sokoban.png" alt="project" />
         <p class="project-title">
           <span class="code">&lt;</span>
           Sokoban
@@ -89,7 +89,7 @@
         </p>
       </a>
       <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" target="_blank" class="project project-tile">
-        <img class="project-image" src="/portfolioyboost/Static/images/hangman.png" alt="project" />
+        <img class="project-image" src="./images/hangman.png" alt="project" />
         <p class="project-title">
           <span class="code">&lt;</span>
           Hangman-web / Hangman
@@ -97,7 +97,7 @@
         </p>
       </a>
       <a href="https://biggerthanme.fr/" target="_blank" class="project project-tile">
-        <img class="project-image" src="/portfolioyboost/Static/images/BTM-Documentaire_BIS.png" alt="project" />
+        <img class="project-image" src="./images/BTM-Documentaire_BIS.png" alt="project" />
         <p class="project-title">
           <span class="code">&lt;</span>
           Bigger Than Me
@@ -106,7 +106,7 @@
       </a>
       <a href="https://github.com/Lyon-Ynov-Campus/groupie-tracker-inflation" target="_blank"
         class="project project-tile">
-        <img class="project-image" src="/portfolioyboost/Static/images/groupietracker.png" alt="project" />
+        <img class="project-image" src="./images/groupietracker.png" alt="project" />
         <p class="project-title">
           <span class="code">&lt;</span>
           GroupieTracker
@@ -115,7 +115,7 @@
       </a>
       <a href="https://www.freecodecamp.org/certification/godafflig/responsive-web-design" target="_blank"
         class="project project-tile">
-        <img class="project-image" src="/portfolioyboost/Static/images/certification.png" alt="project" />
+        <img class="project-image" src="./images/certification.png" alt="project" />
         <p class="project-title">
           <span class="code">&lt;</span>
           Responsive Web Design Developer Certification
@@ -125,7 +125,7 @@
       </a>
       <a href="https://github.com/laurentdebize-ynov-b1/tp-instruments-godafflig" target="_blank"
         class="project project-tile">
-        <img class="project-image" src="/portfolioyboost/Static/images/tpinstrument.jpg " alt="project" />
+        <img class="project-image" src="./images/tpinstrument.jpg " alt="project" />
         <p class="project-title">
           <span class="code">&lt;</span>
           logiciel de gestion d'instrument
@@ -152,7 +152,7 @@
     </div>
     <!-- <p class="prénom">Tom Benat</p> -->
   </footer>
-  <script src="/portfolioyboost/app.js">
+  <script src="app.js">
   </script>
 </body>
 
