--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ul>
   </nav>
   <section id="welcome-section" class="welcome-section">
-    <h1>Hello! mon nom est Tom <img src="../images/photocv2023.jpeg" width="80" height="120"></h1>
+    <h1>Hello! mon nom est Tom <img src="./images/photocv2023.jpeg" width="80" height="120"></h1>
     <p> je suis un Développeur web</p>
   </section>
   <section id="competence">
